--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@ h1{
 	color: blue;
 	font-style: bold;
 }
+div{
+	width: 100%;
+	height: 100px;
+	background-image: url(img/powerfluor.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
